fix: fix position of input error on small screens

--- a/blocks/intro/__form_error/intro__form_error_active.css
+++ b/blocks/intro/__form_error/intro__form_error_active.css
@@ -18,7 +18,8 @@
 
 @media screen and (max-width: 420px) {
     .intro__form_error_active {
-        margin-top: -95px;
+        position: absolute;
+        top: -10px;
         min-width: 300px;
     }
 }
